# structure

./: .gitignore  LICENSE  README.md  stack.yaml  structure.cabal
src/: Main.hs  Structure.hs
src/Structure/Data/: Structure.hs
